# AVX

./: .gitignore  AVX-Framework.sln  AVX.sln  CMakeLists.txt  Quelle-AVX-Native.eapx  README.md
AV-Console/: AV-Console.csproj  Program.cs
AV-Engine/: AV-Engine.csproj  AVEngine.cs  NativeLibrary.cs
AV-Search/: AV-Search.csproj
AV-Search/Model/: TBook.cs  TComparator.cs  TExpression.cs  TQuery.cs
AVXCommand/: AVXCommand.cpp  AVXCommand.vcxproj
AVXLib/: AVXLib.vcxproj  AVXLib.vcxproj.filters  CLexIndex.cpp  CMakeLists.txt  CMakeSettings.json  DigitalAV.cpp  Feature.h  FeatureSpec.h  SearchClause.h  SearchControls.h  SearchFragment.h  SearchRequest.h  directory.cpp  directory.h  md5.cpp  md5.h  slicable.cpp
AVXLib/foundations/: book.cpp  book.h  chapter.h  lemmata.h  lexicon.cpp  lexicon.h  names.h  oov_lemmata.cpp  oov_lemmata.h  written.h
AVXLib/xvmem/: XVMem.h  XVMem_platform.h  XVMem_windows.h
AVXSearch/: AVX-Framework-Alternative.pptx  AVX-Framework.pptx  AVX-Search.pptx  AVXBlueprint.cpp  AVXBlueprint.h  AVXComparator.cpp  AVXComparator.h  AVXDeltaComparator.cpp  AVXDeltaComparator.h  AVXFind.cpp  AVXFind.h  AVXFound.cpp  AVXFound.h  AVXFragment.cpp  AVXFragment.h  AVXHistory.cpp  AVXLemmaComparator.cpp  AVXLemmaComparator.h  AVXMatch.cpp  AVXMatch.h  AVXMatchAny.cpp  AVXMatchAny.h  AVXPOS16Comparator.cpp  AVXPOS16Comparator.h  AVXPOS32Comparator.cpp  AVXPOS32Comparator.h  AVXPuncComparator.cpp  AVXPuncComparator.h  AVXRender.cpp  AVXRender.h  AVXResult.cpp  AVXResult.h  AVXResults.cpp  AVXResults.h  AVXSearch.cpp  AVXSearch.h  AVXSearch.sln  AVXSearch.vcxproj  AVXSearch.vcxproj.filters  AVXSegment.cpp  (+46 more)
AVXSearch-copy/: AVXFind.cpp  AVXRender.cpp  AVXSegment.cpp  AVXWordComparator.cpp
AVXSearch-tmp/: AVXDeltaComparator.cpp  AVXLemmaComparator.cpp  AVXMatch.cpp  AVXPuncComparator.cpp
AVXSearch/yaml/: TBook.cpp  TBook.h  TChapter.cpp  TChapter.h  TClientManager.cpp  TClientManager.h  TExpression.cpp  TExpression.h  TFound.cpp  TFound.h  TFragment.cpp  TMatch.cpp  TMatch.h  TQuery.cpp  TQuery.h  TQueryManager.cpp  TQueryManager.h
AVXText/: AVXText.sln  AVXText.vcxproj  AVXText.vcxproj.filters  CMakeLists.txt  DigitalAV.h  FeatureSpec.h  directory.cpp  directory.h
AVXText/foundations/: README.txt  avxgen.h  book.cpp  lemmata.cpp  lemmata.h  lexicon.cpp  lexicon.h  names.cpp
AVXText/xvmem/: XVMem_windows.h
omega/: AV-Phonetics.ascii  AV-Phonetics.binary  AVX-Omega-3507.md5  AVX-Omega-3910.md5  AVX-Omega-3910.txt  AVX-Omega-4217.md5  AVX-Omega-4217.txt  Digital-AV-Ω35.docx  Digital-AV-Ω39.docx  Digital-AV-Ω42.docx  Part-of-Speech-for-Digital-AV.docx
omega/Generator/: Generator.csproj  Generator.sln  Manager.cs  TableOfContents.cs
omega/Generator/Managers/: ManageOmega.cs
omega/foundations/cpp/: avxgen.h  book_index.h  chapter_index.h  framework.h  lexicon.h  library.cpp  oov_lemmata.h  verse_index.h  written.h
